# llvm-cross-toolchains

./: .gitignore  README.md  build-all-native-tools.sh  build-all.sh  build-binaryen.sh  build-compiler-rt.sh  build-cygwin-gcc.sh  build-embed-python.sh  build-emscripten.sh  build-gnu-as.sh  build-gnu-binutils.sh  build-libcxx.sh  build-libunwind.sh  build-llvm.sh  build-mingw-libssp.sh  build-mingw-tools.sh  build-mingw.sh  build-musl.sh  build-wabt.sh  build-wamr-ext-libc.sh  build-wamr-ext-libs.sh  build-wamrc.sh  build-wasi-libc.sh  build-wasi-libunwind.sh  cmake-target-wrapper.sh  config  copy_from_prebuilt_toolchains.sh  cross-targets  install-prebuilt-stuff.sh  install-wrapper.sh  strip_toolchain.sh  test.cpp  tools.sh  version
build-tools/: PlistBuddy  PlistBuddy.cmd  codesign  codesign.cmd  emscripten_env  lipo  lipo.cmd  tar_extractor.py  xcrun  xcrun.cmd
build-tools/win32-wrapper/: PlistBuddy.cmd  codesign.cmd  xcrun.cmd
cmake/: wamr.toolchain.cmake
cmake/Platform/: WASI.cmake
docker/: Dockerfile-llvm-buildenv-cross-win32  Dockerfile-llvm-buildenv-glibc-linux  Dockerfile-llvm-buildenv-osxcross  Dockerfile-llvm-buildenv-osxcross-aarch64  aarch64-linux-gnu-ct-ng.config  build-dep-libs.sh  ct-clang-mingw-wrapper.sh  ct-clang-wrapper.sh  x86_64-linux-gnu-ct-ng.config  x86_64-w64-mingw32-ct-ng.config
native-wrapper/: native-wrapper.h  toolchain-wrapper.c
patch/: llvm-13.0.1  llvm-14.0.1  llvm-15.0.7  llvm-16.0.1  llvm-17.0.2
patch/apple-libtapi/: 0000-add-new-maccatalyst-target-string.patch  0001-support-arm64_32.patch
patch/cctools/: 0000-link-static-lto.patch
patch/gnu-binutils-2.40/: 0000-win32-setenv.patch
patch/llvm-13.0.0/: 0000-fix-at_hwcap2-not-defined-in-scudo.patch  0001-libcxx-cygwin.patch  0003-clang-cygwin-basic.patch  0004-llvm-wasm-tls.patch  0004-wasm-emulated-tls.patch
patch/llvm-14.0.0/: 0001-libcxx-cygwin.patch  0004-wasm-emulated-tls.patch  0005-libcxx-newlib-locale.patch
patch/llvm-15.0.0/: 0001-wasm-emulated-tls.patch  0002-wasm-opt-args.patch  0004-Use-hidden-visibility-when-building-for-MinGW-with-Clang.patch
patch/llvm-16.0.0/: 0003-wasm-libcxx.patch
patch/llvm-17.0.1/: 0003-wasm-libcxx.patch  0004-android-libcxx.patch  0004-builtin-add-arm64_32.patch  0005-ohos-compiler-rt-path.patch  0006-ohos-compiler-rt.patch  0007-compiler-rt-detect-arch.patch
patch/mingw-10.0.0/: 0001-crt-Fix-.seh_handler-directives-for-ARM.patch
patch/mingw-9.0.0/: 0000-remove-malloc-h.patch
patch/musl-1.2.2/: 0001-arm32-enable-vdso.patch
patch/musl-1.2.3/: 0002-relr-1.patch  0003-relr-2.patch  0004-relr-3.patch  0005-relr-4.patch  0007-Modify-the-member-names-of-struct-sigcontext-in-loon.patch  0009-loongarch-kstat.patch
patch/musl-1.2.4/: 0000-fix-makefile-argument-too-long.patch  0001-add-loongarch64-port-v6.patch  0003-Modify-the-member-__pad-of-struct-stat-to-__pad1-in-.patch  0005-loongarch-syscall.patch
patch/wamr-1.0.0/: 0000-wamrc-support-MinGW-cross-compiling-on-non-win32-pla.patch  0000-wamrc-support-MinGW-cross-compiling.patch  0001-mingw-link-static-libssp.patch  0001-wamrc-link-LLVM-shared-lib-only-if-exists.patch  0002-wamrc-link-static-libssp-for-MinGW.patch  0003-wamrc-support-installing-wamrc.patch  0004-wamrc-fix-compilation-error-for-MinGW-GCC.patch
patch/wamr-1.1.2/: 0000-wamrc-llvm16.patch
patch/wamr-1.2.3/: 0000-core-iwasm-compilation-Support-LLVM-17.patch
patch/wasi-libc-30094b6e/: 0000-custom-pthread-type.patch  0001-fix-compile-error.patch
patch/wasi-libc-ad513341/: 0001-dlmalloc-c++.patch
prebuilt-bionic/: extract_bionic_from_ndk.sh
prebuilt-cctools/: build-cctools.sh
prebuilt-cygwin/: prepare_sysroot.sh
prebuilt-darwin-sdk/: extract_sdks_from_xcode.sh  extract_sdks_from_xcode_archive.sh
prebuilt-freebsd/: prepare_sysroot.sh
prebuilt-glibc/: build-glibc.sh
prebuilt-linux-header/: build-linux-header.sh
prebuilt-msvc-sdk/: extract_sdk_from_msvc.sh
prebuilt-msys2/: prepare_sysroot.sh
prebuilt-ohos/: extract_sdk.sh
wamr/: CMakeLists.txt  defined-symbols.txt
wamr/include/: __header_fcntl.h  __header_poll.h  ifaddrs.h  pthread.h  signal.h  unistd.h
wamr/include/arpa/: inet.h
wamr/include/sys/: socket.h  un.h
wamr/src/: fcntl.c  filesystem.c  flock.c  pthread.c  socket_api.c  sysconf.c  user_group.c  utility.c  wamr_libc.c
win32-toolchain-extractor/: main.py  package_info.py  package_tar_info.py  requirements.txt  tar_extractor.py
wrapper/: cctools_wrapper.go  cctools_wrapper.py  clang_wrapper.go  clang_wrapper.py  go.mod  lld_wrapper.go  lld_wrapper.py  toolchain_wrapper.go  toolchain_wrapper.py  toolchain_wrapper_tools.py
